# app-type-detector

./: .gitignore  .version-preset  CHANGELOG.md  LICENSE  README.md  justfile
app/: Cargo.toml
app/.cargo/: config.toml
app/bindings/node/: .npmignore  Cargo.toml  README.md  build.rs  index.d.ts  index.js  loader.js  package.json  pnpm-lock.yaml  tsconfig.json  vitest.config.ts
app/bindings/node/__test__/: index.test.ts  loader.test.ts  smoke.test.ts
app/bindings/node/__test__/fixtures/: memory-snapshot.test.ts
app/bindings/node/npm/darwin-arm64/: README.md  package.json
app/bindings/node/npm/darwin-x64/: README.md  package.json
app/bindings/node/npm/linux-arm64-gnu/: README.md  package.json
app/bindings/node/npm/linux-x64-gnu/: README.md  package.json
app/bindings/node/npm/linux-x64-musl/: README.md  package.json
app/bindings/node/npm/win32-x64-msvc/: README.md  package.json
app/bindings/node/src/: lib.rs
app/bindings/python/: README.md
app/crates/app-type-detector/: Cargo.toml  build.rs
app/crates/app-type-detector-cli/: Cargo.toml
app/crates/app-type-detector-cli/src/: main.rs
app/crates/app-type-detector-cli/tests/: cli.rs
app/crates/app-type-detector/src/: default_rules.json  default_rules.rs  engine.rs  lib.rs  render.rs  rules.rs  snapshot.rs  synthesis.rs
app/crates/app-type-detector/src/types/: app_type.rs  enums.rs  mod.rs  report.rs  scorecard.rs  tech_stack.rs
app/crates/app-type-detector/tests/: detect_memory.rs  detect_path.rs  edge_cases.rs  polyglot.rs  render.rs  scorecard.rs  types_serialize.rs
app/crates/app-type-detector/tests/fixtures/angular-app/: package.json
app/crates/app-type-detector/tests/fixtures/astro-static-site/: package.json
app/crates/app-type-detector/tests/fixtures/bevy-game/: Cargo.toml
app/crates/app-type-detector/tests/fixtures/bun-fastify-api/: package.json
app/crates/app-type-detector/tests/fixtures/cargo-workspace/: Cargo.toml
app/crates/app-type-detector/tests/fixtures/chrome-extension/: manifest.json
app/crates/app-type-detector/tests/fixtures/claude-skill/: SKILL.md
app/crates/app-type-detector/tests/fixtures/cli-rust/: Cargo.toml
app/crates/app-type-detector/tests/fixtures/django-app/: manage.py  requirements.txt
app/crates/app-type-detector/tests/fixtures/electron-desktop-app/: package.json
app/crates/app-type-detector/tests/fixtures/express-api/: package.json
app/crates/app-type-detector/tests/fixtures/fastapi-api/: pyproject.toml
app/crates/app-type-detector/tests/fixtures/flask-api/: app.py  pyproject.toml
app/crates/app-type-detector/tests/fixtures/gatsby-site/: gatsby-config.js  package.json
app/crates/app-type-detector/tests/fixtures/godot-game/: project.godot
app/crates/app-type-detector/tests/fixtures/html-static-site/: index.html  styles.css
app/crates/app-type-detector/tests/fixtures/kotlin-android-app/: build.gradle.kts
app/crates/app-type-detector/tests/fixtures/library-rust/: Cargo.toml
app/crates/app-type-detector/tests/fixtures/mcp-server-typescript/: package.json
app/crates/app-type-detector/tests/fixtures/nextjs-postgres-saas/: Dockerfile  docker-compose.yml  package.json  tailwind.config.ts
app/crates/app-type-detector/tests/fixtures/node-cli-tool/: package.json
app/crates/app-type-detector/tests/fixtures/node-library/: package.json
app/crates/app-type-detector/tests/fixtures/nuxt-app/: package.json
app/crates/app-type-detector/tests/fixtures/obsidian-plugin/: main.ts  manifest.json
app/crates/app-type-detector/tests/fixtures/polyglot-monorepo/: Cargo.toml  README.md  package.json  pyproject.toml
app/crates/app-type-detector/tests/fixtures/python-click-cli/: pyproject.toml
docs/: 00-overview.md  02-output-format.md  03-rules.md  (+2 more)
(+54 files in other folders)
