[workspace]
resolver = "2"
members = [
    "crates/app-type-detector",
    "crates/app-type-detector-cli",
]

[workspace.package]
version = "0.2.0"
edition = "2021"
rust-version = "1.82"
license = "MIT"
repository = "https://github.com/snam/app-type-detector"
homepage = "https://github.com/snam/app-type-detector"
authors = ["snam"]

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
regex = "1"
globset = "0.4"
walkdir = "2"
once_cell = "1"
thiserror = "1"
clap = { version = "4", features = ["derive"] }

[profile.release]
lto = "thin"
codegen-units = 1
