[package]
name = "app-type-detector-cli"
description = "CLI for app-type-detector."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true

[[bin]]
name = "app-type-detector"
path = "src/main.rs"

[dependencies]
app-type-detector = { path = "../app-type-detector" }
clap = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
